--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
     <div id="tab4" class="content">
         <h1>LIVE STEAM</h1>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://vdo.ninja/?view=y864jMN&bitrate=20000" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://vdo.ninja/?view=y864jMN&bitrate=20000" frameborder="0"
+                allowfullscreen></iframe>
         </div>
         <a class="external-link" href="https://ab22-171-96-136-158.ngrok-free.app" target="_blank">ลิ้งค์ภายนอก</a>
     </div>
@@ -302,7 +303,8 @@
         <p>https://8141-171-96-136-85.ngrok-free.app</p>
     </div>
     <footer>
-        <p>&copy; 2024 PANUWAT_SERVER. ทั้งหมด. | ออกแบบโดย <a href="https://panuwatdev.com" target="_blank">PANUWAT_SERVER</a></p>
+        <p>&copy; 2024 PANUWAT_SERVER. ทั้งหมด. | ออกแบบโดย <a href="https://www.facebook.com/BOSS.klqqq/"
+                target="_blank">PANUWAT_SERVER</a></p>
     </footer>
 </body>
 
