--- a/index.html
+++ b/index.html
@@ -6,36 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PANUWAT_DEV</title>
     <style>
+        /* Import Minecraft font */
+        @font-face {
+            font-family: 'Minecraft';
+            src: url('https://example.com/minecraft-font.ttf') format('truetype'); /* เปลี่ยน URL นี้ไปที่ฟอนต์ Minecraft */
+        }
+
         /* Global styles */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Minecraft', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #ffc107, #ff5722);
+            background-color: #5C913B; /* พื้นหลังสีเขียวแนว Minecraft */
             color: #fff;
             display: flex;
             flex-direction: column;
             align-items: center;
             min-height: 100vh;
-            animation: backgroundChange 10s infinite;
-        }
-
-        @keyframes backgroundChange {
-            0% {
-                background: #ffc107;
-            }
-
-            33% {
-                background: #03a9f4;
-            }
-
-            66% {
-                background: #4caf50;
-            }
-
-            100% {
-                background: #ff5722;
-            }
+            text-align: center;
         }
 
         /* Navigation */
@@ -61,6 +49,8 @@
             transition: background 0.3s ease;
             border-radius: 5px;
             margin: 0 10px;
+            background: #4caf50;
+            border: 2px solid #333;
         }
 
         nav a:hover {
@@ -75,10 +65,9 @@
             width: 100%;
             max-width: 800px;
             margin: 20px 0;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.6);
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            animation: fadeIn 1s ease;
         }
 
         .content.active {
@@ -106,96 +95,7 @@
             color: #fff;
             text-align: center;
             width: 100%;
-        }
-
-        /* Password Container */
-        .password-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background: rgba(0, 0, 0, 0.9);
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 2000;
-        }
-
-        .password-container input {
-            padding: 15px;
-            font-size: 18px;
-            margin: 10px 0;
-            border: 1px solid #ff5722;
-            border-radius: 8px;
-            width: 80%;
-            max-width: 300px;
-            text-align: center;
-            color: #fff;
-            background-color: rgba(255, 255, 255, 0.1);
-        }
-
-        .password-container button {
-            padding: 15px 30px;
-            font-size: 18px;
-            cursor: pointer;
-            background: #ff5722;
-            border: none;
-            color: #fff;
-            border-radius: 8px;
-            transition: background 0.3s ease;
-            margin-top: 20px;
-        }
-
-        .password-container button:hover {
-            background: #ffc107;
-        }
-
-        /* Popup Container */
-        .popup-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            background: rgba(0, 0, 0, 0.9);
-            z-index: 3000;
-        }
-
-        .popup-content {
-            background: #fff;
-            padding: 30px;
-            border-radius: 12px;
-            text-align: center;
-            color: #000;
-            max-width: 600px;
-            width: 80%;
-        }
-
-        .popup-content h1 {
-            margin: 0;
-            font-size: 36px;
-            animation: fadeIn 2s ease;
-        }
-
-        .popup-content button {
-            padding: 15px 30px;
-            margin-top: 30px;
-            background: #ff5722;
-            border: none;
-            color: #fff;
-            cursor: pointer;
-            border-radius: 8px;
-            transition: background 0.3s ease;
-            font-size: 18px;
-        }
-
-        .popup-content button:hover {
-            background: #ffc107;
+            font-family: 'Minecraft', sans-serif;
         }
 
         .external-link {
@@ -207,18 +107,6 @@
             cursor: pointer;
         }
 
-        /* Animations */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-50px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
     </style>
     <script>
         function showTab(tabId) {
@@ -229,44 +117,19 @@
             document.getElementById(tabId).classList.add('active');
         }
 
-        function checkPassword() {
-            var password = document.getElementById('passwordInput').value;
-            if (password === "boss") {
-                document.querySelector('.password-container').style.display = 'none';
-            } else {
-                alert("รหัสผ่านไม่ถูกต้อง!");
-            }
-        }
-
-        function closePopup() {
-            document.querySelector('.popup-container').style.display = 'none';
-        }
-
         window.onload = function () {
             showTab('tab1');
-            document.querySelector('.popup-container').style.display = 'flex';
         };
     </script>
 </head>
 
 <body>
-    <div class="password-container">
-        <h1>กรุณาใส่รหัสผ่าน</h1>
-        <input type="password" id="passwordInput" placeholder="รหัสผ่าน">
-        <button onclick="checkPassword()">เข้าสู่ระบบ</button>
-    </div>
-    <div class="popup-container" style="display: none;">
-        <div class="popup-content">
-            <h1>ยินดีต้อนรับเข้าสู่หลังบ้านของ PANUWAT_SERVER</h1>
-            <button onclick="closePopup()">ปิด</button>
-        </div>
-    </div>
     <nav>
         <a href="#" onclick="showTab('tab1')">SERVER</a>
         <a href="#" onclick="showTab('tab2')">INTERNET</a>
         <a href="#" onclick="showTab('tab3')">Remote</a>
         <a href="#" onclick="showTab('tab4')">LIVE STEAM</a>
-        <a href="#" onclick="showTab('tab5')">CODE</a> <!-- New tab link -->
+        <a href="#" onclick="showTab('tab5')">CODE</a>
     </nav>
     <div id="tab1" class="content active">
         <h1>SERVER CPU</h1>
@@ -291,9 +154,9 @@
             <iframe width="560" height="315" src="https://vdo.ninja/?view=y864jMN&bitrate=20000" frameborder="0"
                 allowfullscreen></iframe>
         </div>
-        <a class="external-link" href="https://ab22-171-96-136-158.ngrok-free.app" target="_blank">ลิ้งค์ภายนอก</a>
+        <a class="external-link" href="https://benharry12.github.io/panuwat/" target="_blank">ลิ้งค์ภายนอก</a>
     </div>
-    <div id="tab5" class="content"> <!-- New content div -->
+    <div id="tab5" class="content">
         <h1>Code</h1>
         <p>True</p>
         <p>https://b1c8-171-96-136-85.ngrok-free.app</p>
