--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             width: 100%;
             background: rgba(0, 0, 0, 0.8);
             display: flex;
+            flex-direction: row; /* จัดเรียงแท็บให้เป็นแนวนอน */
             justify-content: center;
             align-items: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -41,16 +42,19 @@
         }
 
         nav a {
-            padding: 15px 20px;
+            padding: 8px 10px; /* ขนาดแท็บ */
             color: #fff;
             text-decoration: none;
             text-transform: uppercase;
             font-weight: bold;
             transition: background 0.3s ease;
-            border-radius: 5px;
-            margin: 0 10px;
+            border-radius: 0px; /* ทำให้เป็นสี่เหลี่ยม */
+            margin: 0 5px; /* ช่องว่างระหว่างแท็บในแนวนอน */
             background: #4caf50;
             border: 2px solid #333;
+            width: auto;
+            text-align: center;
+            font-size: 12px; /* ปรับฟอนต์ให้เล็กลง */
         }
 
         nav a:hover {
@@ -107,6 +111,22 @@
             cursor: pointer;
         }
 
+        /* Responsive Design for Mobile */
+        @media only screen and (max-width: 768px) {
+            .video-container iframe {
+                height: 300px;
+            }
+
+            nav a {
+                padding: 6px 8px;
+                font-size: 10px;
+                margin: 2px;
+            }
+
+            .external-link {
+                font-size: 16px;
+            }
+        }
     </style>
     <script>
         function showTab(tabId) {
@@ -127,27 +147,25 @@
     <nav>
         <a href="#" onclick="showTab('tab1')">SERVER</a>
         <a href="#" onclick="showTab('tab2')">INTERNET</a>
-        <a href="#" onclick="showTab('tab3')">Remote</a>
         <a href="#" onclick="showTab('tab4')">LIVE STEAM</a>
-        <a href="#" onclick="showTab('tab5')">CODE</a>
+        <!-- SERVER MINECRAFT เปิดหน้าเว็บใหม่ในแท็บเดิม -->
+        <a href="https://benharry12.github.io/panuwat/">SERVER MINECRAFT</a>
     </nav>
+
     <div id="tab1" class="content active">
         <h1>SERVER CPU</h1>
         <div class="video-container">
             <iframe src="https://vdo.ninja/?view=ie7VQBu" allowfullscreen></iframe>
         </div>
     </div>
+
     <div id="tab2" class="content">
         <h1>INTERNET</h1>
         <div class="video-container">
             <iframe src="https://vdo.ninja/?view=xUmxwEW" allowfullscreen></iframe>
         </div>
     </div>
-    <div id="tab3" class="content">
-        <h1>Remote</h1>
-        <p><a href="https://remotedesktop.google.com/access/session/1a4058f2-ef02-c824-4c08-49a845470e55"
-                target="_blank">SERVER</a></p>
-    </div>
+
     <div id="tab4" class="content">
         <h1>LIVE STEAM</h1>
         <div class="video-container">
@@ -156,15 +174,7 @@
         </div>
         <a class="external-link" href="https://benharry12.github.io/panuwat/" target="_blank">ลิ้งค์ภายนอก</a>
     </div>
-    <div id="tab5" class="content">
-        <h1>Code</h1>
-        <p>True</p>
-        <p>https://b1c8-171-96-136-85.ngrok-free.app</p>
-        <p>ngrok config add-authtoken 2iW8VLiYOiF0NkmiXH2KwjEaLxj_3DaZZUijPzz9CxkYwN5tS</p>
-        <h2>Server</h2>
-        <p>ngrok config add-authtoken 1tkM67sCdNGGBWHeGtXcHY3oO99_41TziYJXptMHYo7Vi9weP</p>
-        <p>https://8141-171-96-136-85.ngrok-free.app</p>
-    </div>
+
     <footer>
         <p>&copy; 2024 PANUWAT_SERVER. ทั้งหมด. | ออกแบบโดย <a href="https://www.facebook.com/BOSS.klqqq/"
                 target="_blank">PANUWAT_SERVER</a></p>
