--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: 'Minecraft', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #5C913B; /* พื้นหลังสีเขียวแนว Minecraft */
+            background-color: #5C913B;
             color: #fff;
             display: flex;
             flex-direction: column;
@@ -31,7 +31,7 @@
             width: 100%;
             background: rgba(0, 0, 0, 0.8);
             display: flex;
-            flex-direction: row; /* จัดเรียงแท็บให้เป็นแนวนอน */
+            flex-direction: row;
             justify-content: center;
             align-items: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -42,19 +42,18 @@
         }
 
         nav a {
-            padding: 8px 10px; /* ขนาดแท็บ */
+            padding: 8px 10px;
             color: #fff;
             text-decoration: none;
             text-transform: uppercase;
             font-weight: bold;
             transition: background 0.3s ease;
-            border-radius: 0px; /* ทำให้เป็นสี่เหลี่ยม */
-            margin: 0 5px; /* ช่องว่างระหว่างแท็บในแนวนอน */
+            border-radius: 0px;
+            margin: 0 5px;
             background: #4caf50;
             border: 2px solid #333;
-            width: auto;
             text-align: center;
-            font-size: 12px; /* ปรับฟอนต์ให้เล็กลง */
+            font-size: 12px;
         }
 
         nav a:hover {
@@ -113,8 +112,12 @@
 
         /* Responsive Design for Mobile */
         @media only screen and (max-width: 768px) {
-            .video-container iframe {
-                height: 300px;
+            body {
+                padding: 0 10px; /* เพิ่ม padding รอบข้างสำหรับหน้าจอขนาดเล็ก */
+            }
+
+            nav {
+                flex-wrap: wrap; /* ให้แท็บแตกบรรทัดบนหน้าจอมือถือ */
             }
 
             nav a {
@@ -123,8 +126,20 @@
                 margin: 2px;
             }
 
+            .content {
+                padding: 10px; /* ลดขนาด padding ของเนื้อหาบนมือถือ */
+            }
+
+            .video-container iframe {
+                height: 300px; /* ลดขนาด iframe บนมือถือ */
+            }
+
             .external-link {
                 font-size: 16px;
+            }
+
+            footer {
+                padding: 5px;
             }
         }
     </style>
