--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PANUWAT_DEV</title>
+
+    <!-- ใส่โลโก้เป็น favicon -->
+    <link rel="icon" href="https://img5.pic.in.th/file/secure-sv1/IMG_076653e98b38560f08f3.jpeg" type="image/jpeg">
+
     <style>
         /* Import Minecraft font */
         @font-face {
