--- a/index.html
+++ b/index.html
@@ -7,74 +7,72 @@
     <title>PANUWAT_DEV</title>
     <link rel="icon" href="https://img5.pic.in.th/file/secure-sv1/IMG_076653e98b38560f08f3.jpeg" type="image/jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    
+
     <style>
         /* Global styles */
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(45deg, #FF0000, #FF7F00, #FFFF00, #00FF00, #0000FF, #4B0082, #9400D3);
-            color: #fff;
+            background-color: #f5f5f5;
+            color: #333;
             display: flex;
-            flex-direction: column;
-            justify-content: space-between;
             min-height: 100vh;
-            text-align: center;
             overflow-x: hidden;
-            background-size: 400% 400%;
-            animation: gradientAnimation 10s ease infinite;
         }
 
-        /* Animation for background */
-        @keyframes gradientAnimation {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        /* Navigation */
-        nav {
-            width: 100%;
-            background: rgba(0, 0, 0, 0.6);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px 0;
-            position: sticky;
+        /* Sidebar */
+        .sidebar {
+            width: 250px;
+            background-color: #2C3E50;
+            padding-top: 20px;
+            position: fixed;
+            height: 100%;
             top: 0;
+            left: 0;
             z-index: 1000;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+            box-shadow: 4px 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        nav a {
-            padding: 15px 20px;
+        .sidebar a {
+            display: block;
+            padding: 15px;
             color: #fff;
             text-decoration: none;
             font-weight: bold;
-            margin: 0 12px;
             font-size: 18px;
-            letter-spacing: 1px;
             text-transform: uppercase;
+            letter-spacing: 1px;
+            margin: 10px 0;
             transition: all 0.3s ease;
-            background-color: #ff61a6;
-            border-radius: 30px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            background-color: #3498db;
+            border-radius: 5px;
         }
 
-        nav a:hover {
+        .sidebar a.active {
             background-color: #fff;
-            color: #ff61a6;
-            transform: scale(1.1);
+            color: #3498db;
+        }
+
+        .sidebar a:hover {
+            background-color: #fff;
+            color: #3498db;
+        }
+
+        /* Content area */
+        .content-area {
+            margin-left: 250px;
+            padding: 20px;
+            flex-grow: 1;
         }
 
         /* Content sections */
         .content {
             display: none;
-            padding: 50px 20px;
-            background: rgba(0, 0, 0, 0.6);
+            padding: 40px 20px;
+            background: #ffffff;
             border-radius: 12px;
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
             transform: translateY(20px);
             transition: transform 0.4s ease, opacity 0.4s ease;
         }
@@ -89,7 +87,7 @@
             margin-bottom: 30px;
             border-radius: 12px;
             overflow: hidden;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
         }
 
         .video-container iframe {
@@ -106,10 +104,10 @@
         /* Footer */
         footer {
             padding: 30px 20px;
-            background: rgba(0, 0, 0, 0.8);
+            background-color: #34495e;
             color: #fff;
             text-align: center;
-            box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
             position: fixed;
             width: 100%;
             bottom: 0;
@@ -123,7 +121,7 @@
         }
 
         footer a:hover {
-            color: #ff61a6;
+            color: #3498db;
         }
 
         .external-link {
@@ -137,79 +135,124 @@
         }
 
         .external-link:hover {
-            color: #ff61a6;
+            color: #3498db;
+        }
+
+        /* Time display */
+        .time {
+            font-size: 20px;
+            margin-top: 10px;
+            color: #3498db;
+            font-weight: bold;
         }
 
         /* Responsive Design */
         @media only screen and (max-width: 768px) {
             body {
-                padding: 20px;
+                flex-direction: column;
             }
 
-            nav a {
-                font-size: 16px;
-                padding: 10px 15px;
+            .sidebar {
+                width: 100%;
+                height: auto;
+                position: relative;
+                display: flex;
+                justify-content: center;
+                box-shadow: none;
+            }
+
+            .sidebar a {
                 margin: 5px;
+                font-size: 14px;
             }
 
-            .content {
-                padding: 40px 15px;
-            }
-
-            .video-container iframe {
-                height: 300px;
-            }
-
-            footer {
-                padding: 20px 15px;
+            .content-area {
+                margin-left: 0;
             }
         }
     </style>
+
     <script>
+        // JavaScript function to handle tab changes
         function showTab(tabId) {
             var tabs = document.querySelectorAll('.content');
             tabs.forEach(function (tab) {
                 tab.classList.remove('active');
             });
+
+            // Add active class to the clicked tab's content
+            var tabLinks = document.querySelectorAll('.sidebar a');
+            tabLinks.forEach(function (link) {
+                link.classList.remove('active');
+            });
+
+            // Display the selected tab content
             document.getElementById(tabId).classList.add('active');
+            document.querySelector(`.sidebar a[href="#${tabId}"]`).classList.add('active');
+        }
+
+        // Function to update the time in Thailand
+        function updateTime() {
+            var timeElement = document.getElementById('time');
+            var now = new Date();
+            var thailandOffset = 7; // Thailand is UTC+7
+            now.setHours(now.getHours() + thailandOffset);
+            var timeString = now.toLocaleString('th-TH', { hour12: false });
+            timeElement.textContent = "เวลาประเทศไทย: " + timeString;
         }
 
         window.onload = function () {
-            showTab('tab1');
+            showTab('tab1'); // Default active tab
+            setInterval(updateTime, 1000); // Update time every second
         };
     </script>
 </head>
 
 <body>
-    <nav>
-        <a href="#" onclick="showTab('tab1')">SERVER</a>
-        <a href="#" onclick="showTab('tab2')">INTERNET</a>
-        <a href="#" onclick="showTab('tab4')">LIVE STREAM</a>
+    <!-- Sidebar for navigation -->
+    <div class="sidebar">
+        <a href="#tab1" onclick="showTab('tab1')">SERVER</a>
+        <a href="#tab2" onclick="showTab('tab2')">INTERNET</a>
+        <a href="#tab3" onclick="showTab('tab3')">LIVE STREAM</a>
+        <a href="#tab4" onclick="showTab('tab4')">CHAT GPT</a>
         <a href="https://benharry12.github.io/panuwat/">SERVER MINECRAFT</a>
-    </nav>
+    </div>
 
-    <div id="tab1" class="content active">
-        <h1>SERVER CPU</h1>
-        <div class="video-container">
-            <iframe src="https://vdo.ninja/?view=ie7VQBu" allowfullscreen></iframe>
+    <!-- Content area where the selected tab will be displayed -->
+    <div class="content-area">
+        <!-- Time display -->
+        <div id="time" class="time"></div>
+
+        <!-- Content sections -->
+        <div id="tab1" class="content active">
+            <h1>SERVER CPU</h1>
+            <div class="video-container">
+                <iframe src="https://vdo.ninja/?view=ie7VQBu" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <div id="tab2" class="content">
+            <h1>INTERNET</h1>
+            <div class="video-container">
+                <iframe src="https://vdo.ninja/?view=xUmxwEW" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <div id="tab3" class="content">
+            <h1>LIVE STREAM</h1>
+            <div class="video-container">
+                <iframe src="https://vdo.ninja/?view=y864jMN&bitrate=20000" allowfullscreen></iframe>
+            </div>
+            <a class="external-link" href="https://benharry12.github.io/panuwat/" target="_blank">ลิ้งค์ภายนอก</a>
+        </div>
+
+        <div id="tab4" class="content">
+            <h1>CHAT GPT (กำลังปรับปรุง)</h1>
+            <p>เรากำลังปรับปรุงการเชื่อมต่อกับ ChatGPT กรุณากลับมาที่นี่ในภายหลัง</p>
         </div>
     </div>
 
-    <div id="tab2" class="content">
-        <h1>INTERNET</h1>
-        <div class="video-container">
-            <iframe src="https://vdo.ninja/?view=xUmxwEW" allowfullscreen></iframe>
-        </div>
-    </div>
-
-    <div id="tab4" class="content">
-        <h1>LIVE STREAM</h1>
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://vdo.ninja/?view=y864jMN&bitrate=20000" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <a class="external-link" href="https://benharry12.github.io/panuwat/" target="_blank">ลิ้งค์ภายนอก</a>
-    </div>
-
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 PANUWAT_SERVER. ทั้งหมด. | ออกแบบโดย <a href="https://www.facebook.com/benharry12" target="_blank">BenHarry12</a></p>
     </footer>
